--- a/todo_project/todoapp/static/css/signup.css
+++ b/todo_project/todoapp/static/css/signup.css
@@ -1,133 +1,82 @@
-*,
-*:before,
-*:after {
-  padding: 0;
-  margin: 0;
-  box-sizing: border-box;
-}
+/* Add your custom CSS styles here */
 
 body {
-  background-color: #080710;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+  background-color: #d6e2f4;
 }
 
 .background {
-  width: 430px;
-  height: 520px;
   position: absolute;
-  transform: translate(-50%, -50%);
-  left: 50%;
-  top: 50%;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #a1a5a8;
+  z-index: -1;
 }
 
-.background .shape {
-  height: 200px;
-  width: 200px;
+.shape {
   position: absolute;
+  background-color: #fff;
   border-radius: 50%;
+  opacity: 0.8;
 }
 
-.shape:first-child {
-  background: linear-gradient(#1845ad, #23a2f6);
-  left: -80px;
-  top: -80px;
+.shape:nth-child(1) {
+  top: 10%;
+  left: 10%;
+  width: 80px;
+  height: 80px;
 }
 
-.shape:last-child {
-  background: linear-gradient(to right, #ff512f, #f09819);
-  right: -30px;
-  bottom: -80px;
+.shape:nth-child(2) {
+  top: 30%;
+  left: 70%;
+  width: 60px;
+  height: 60px;
 }
 
 form {
-  height: calc(600px + 1cm);
-  width: calc(450px + 1cm);
-  background-color: rgba(255, 255, 255, 0.13);
-  position: absolute;
-  transform: translate(-50%, -50%);
-  top: 50%;
-  left: 50%;
-  border-radius: 10px;
-  -webkit-backdrop-filter: blur(5px);
-  backdrop-filter: blur(10px);
-  border: 2px solid rgba(255, 255, 255, 0.1);
-  box-shadow: 0 0 40px rgba(8, 7, 16, 0.6);
-  padding: 50px 35px;
+  background-color: #fff;
+  padding: 20px;
+  border-radius: 5px;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
 }
 
-form * {
-  font-family: 'Poppins', sans-serif;
-  color: #ffffff;
-  letter-spacing: 0.5px;
-  outline: none;
-  border: none;
-}
-
-form h3 {
-  font-size: 32px;
-  font-weight: 500;
-  line-height: 42px;
+h3 {
   text-align: center;
+  margin-bottom: 20px;
 }
 
 label {
-  display: block;
-  margin-top: 30px;
-  font-size: 16px;
-  font-weight: 500;
+  font-weight: bold;
 }
 
-input {
-  display: block;
-  height: 40px;
+input[type="text"],
+input[type="email"],
+input[type="password"] {
   width: 100%;
-  background-color: rgba(255, 255, 255, 0.07);
-  border-radius: 3px;
-  padding: 0 10px;
-  margin-top: 2px;
-  font-size: 14px;
-  font-weight: 300;
-  color: #ffffff;
-}
-
-::placeholder {
-  color: #e5e5e5;
-}
-
-button {
-  margin-top: 14px;
-  width: 100%;
-  background-color: #ffffff;
-  color: #080710;
-  padding: 15px 0;
-  font-size: 18px;
-  font-weight: 600;
+  padding: 10px;
+  margin-bottom: 20px;
   border-radius: 5px;
-  cursor: pointer;
+  border: 1px solid #ccc;
 }
 
-.social {
-  margin-top: 30px;
-  display: flex;
+button[type="submit"] {
+  width: 100%;
+  padding: 10px;
+  border-radius: 5px;
+  background-color: #007bff;
+  border: none;
+  color: #fff;
 }
 
-.social div {
-  background: red;
-  width: 150px;
-  border-radius: 3px;
-  padding: 5px 10px 10px 5px;
-  background-color: rgba(255, 255, 255, 0.27);
-  color: #eaf0fb;
+a {
+  display: block;
   text-align: center;
-}
-
-.social div:hover {
-  background-color: rgba(255, 255, 255, 0.47);
-}
-
-.social .fb {
-  margin-left: 25px;
-}
-
-.social i {
-  margin-right: 4px;
+  margin-top: 20px;
+  color: #007bff;
 }
