--- a/todo_project/todoapp/static/css/login.css
+++ b/todo_project/todoapp/static/css/login.css
@@ -1,132 +1,51 @@
-*,
-*:before,
-*:after {
-  padding: 0;
-  margin: 0;
-  box-sizing: border-box;
-}
-
+/* login.css */
 body {
-  background-color: #080710;
+ background-color: #96ceef;
 }
-
+/* Background */
 .background {
-  width: 430px;
-  height: 520px;
-  position: absolute;
-  transform: translate(-50%, -50%);
-  left: 50%;
-  top: 50%;
-}
-
-.background .shape {
-  height: 200px;
-  width: 200px;
-  position: absolute;
-  border-radius: 50%;
-}
-
-.shape:first-child {
-  background: linear-gradient(#1845ad, #23a2f6);
-  left: -80px;
-  top: -80px;
-}
-
-.shape:last-child {
-  background: linear-gradient(to right, #ff512f, #f09819);
-  right: -30px;
-  bottom: -80px;
-}
-
-form {
-  height: 520px;
-  width: 400px;
-  background-color: rgba(255, 255, 255, 0.13);
-  position: absolute;
-  transform: translate(-50%, -50%);
-  top: 50%;
-  left: 50%;
-  border-radius: 10px;
-  border: 2px solid rgba(255, 255, 255, 0.1);
-  box-shadow: 0 0 40px rgba(8, 7, 16, 0.6);
-  padding: 50px 35px;
-}
-
-form * {
-  font-family: 'Poppins', sans-serif;
-  color: #ffffff;
-  letter-spacing: 0.5px;
-  outline: none;
-  border: none;
-}
-
-form h3 {
-  font-size: 32px;
-  font-weight: 500;
-  line-height: 42px;
-  text-align: center;
-  margin-bottom: 30px; /* Added margin-bottom */
-}
-
-label {
-  display: block;
-  margin-top: 30px;
-  font-size: 16px;
-  font-weight: 500;
-}
-
-input {
-  display: block;
-  height: 50px;
+  position: fixed;
+  top: 0;
+  left: 0;
   width: 100%;
-  background-color: rgba(255, 255, 255, 0.07);
-  border-radius: 3px;
-  padding: 0 10px;
-  margin-top: 8px;
-  font-size: 14px;
-  font-weight: 300;
-  color: #ffffff; /* Added color */
+  height: 100%;
+  background-color: #f0f0f0;
+  z-index: -1;
 }
 
-::placeholder {
-  color: #e5e5e5;
+/* Container */
+.container {
+  margin-top: 100px;
 }
 
-button {
-  margin-top: 50px;
-  width: 100%;
-  background-color: #ffffff;
-  color: #080710;
-  padding: 15px 0;
-  font-size: 18px;
-  font-weight: 600;
+/* Form */
+#login-form {
+  background-color: #fff;
+  padding: 20px;
   border-radius: 5px;
-  cursor: pointer;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
 }
 
-.social {
-  margin-top: 30px;
-  display: flex;
+/* Form Title */
+.text-center {
+  margin-bottom: 20px;
 }
 
-.social div {
-  background: red;
-  width: 150px;
-  border-radius: 3px;
-  padding: 5px 10px 10px 5px;
-  background-color: rgba(255, 255, 255, 0.27);
-  color: #eaf0fb;
-  text-align: center;
+/* Form Fields */
+.form-group {
+  margin-bottom: 20px;
 }
 
-.social div:hover {
-  background-color: rgba(255, 255, 255, 0.47);
+/* Form Button */
+.btn-primary {
+  width: 100%;
 }
 
-.social .fb {
-  margin-left: 25px;
+/* Form Link */
+.text-center a {
+  color: #007bff;
 }
 
-.social i {
-  margin-right: 4px;
+.text-center a:hover {
+  text-decoration: none;
 }
