--- a/todo_project/todoapp/templates/login.html
+++ b/todo_project/todoapp/templates/login.html
@@ -2,77 +2,36 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <!-- Design by foolishdeveloper.com -->
     <title>Login Page</title>
-    
-    {% comment %} <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.3.0/css/all.min.css">
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;600&display=swap" rel="stylesheet"> {% endcomment %}
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <link rel="stylesheet" href="{% static 'css/login.css' %}">
-
-    <!--Stylesheet-->
 </head>
 <body>
-    <div class="background">
-        <div class="shape"></div>
-        <div class="shape"></div>
-    </div>
-    <form id="login-form" method="post" action="{% url 'login' %}">
-        <h3>Login Here</h3>
-        {% csrf_token %} 
-        <label for="username">Username</label>
-        <input type="text" placeholder="Enter Username" name="username" id="username">
-
-        <label for="password">Password</label>
-        <input type="password" placeholder="Password" name="password" id="password">
-
-        <button type="button" id="btn1">Log In</button>
-        <br>
-        <br>
-        <a href="{% url 'signup' %}">Create an account</a>
-    </form>
-
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.0/jquery.min.js" 
-    integrity="sha512-3gJwYpMe3QewGELv8k/BX9vcqhryRdzRMxVfq6ngyWXwo03GFEzjsUm8Q7RZcHPHksttq7/GFoxjCVUjkjvPdw==" 
-    crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <div class="background"></div>
+    <div class="container">
+        <div class="row justify-content-center">
+            <div class="col-md-6">
+                <form id="login-form" class="mt-5" method="post" action="{% url 'login' %}">
+                    {% csrf_token %} 
+                    <h3 class="text-center">Login Here</h3>
+                    <div class="form-group">
+                        <label for="username">Username</label>
+                        <input type="text" class="form-control" placeholder="Enter Username" name="username" id="username">
+                    </div>
     
-    <script>
-        $(document).ready(function() {
-            $('#btn1').click(function(e) {
-                e.preventDefault();
-                var username = $('#username').val();
-                var password = $('#password').val();
-                var data = {
-                    'csrfmiddlewaretoken': $('input[name=csrfmiddlewaretoken]').val(),
-                    'username': username,
-                    'password': password
-                };
-
-                if (username === '') {
-                    alert('Please enter a valid username');
-                } else if (password === '') {
-                    alert('Please enter a valid password');
-                } else {
-                    $.ajax({
-                        url: $('#login-form').attr('action'),
-                        method: 'POST',
-                        data: data,
-                        dataType: 'json',
-                        success: function(data) {
-                            if (data.success) {
-                                alert('Welcome');
-                                window.location.replace('/index');
-                            } else {
-                                alert('Sorry, try again');
-                            }
-                        },
-                        error: function(xhr, textStatus, error) {
-                            console.log(xhr.responseText);
-                        }
-                    });
-                }
-            });
-        });
-    </script>
+                    <div class="form-group">
+                        <label for="password">Password</label>
+                        <input type="password" class="form-control" placeholder="Password" name="password" id="password">
+                    </div>
+    
+                    <button type="submit" class="btn btn-primary btn-block" id="login-button">Log In</button>
+                    {% comment %} <button type="button" class="btn btn-primary btn-block" id="login-button">Log In</button> {% endcomment %}
+                    <br>
+                    <p class="text-center">Don't have an account? <a href="{% url 'signup' %}">Sign Up</a></p>
+                </form>
+            </div>
+        </div>
+    </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
 </body>
 </html>
